environments/prod/kubernetes/services/utils/fluentd-logging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd-logging
  labels:
    app: fluentd-logging
    env: prod
  namespace: utils
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: fluentd-logging
      labels:
        app: fluentd-logging
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: fluentd-logging
          image: steblynskyi-docker.jfrog.io/devops-logging:v1.0.3
          imagePullPolicy: Always
          resources:
          ports:
            - containerPort: 24224
              protocol: TCP
      restartPolicy: Always
  selector:
    matchLabels:
      app: fluentd-logging
