environments/prod/kubernetes/services/utils/communication-template-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: communication-template-api
  labels:
    app: communication-template-api
    env: prod
  namespace: utils
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: communication-template-api
      labels:
        app: communication-template-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: communication-template-api
          image: steblynskyi-docker.jfrog.io/utils-communication-template-api:6f6f3cd
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 15m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 650Mi
          ports:
            - containerPort: 1337
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: communication-template-api
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: communication-template-api
  namespace: utils
  labels:
    Domain: utils-communication-template-api.steblynskyi.com
spec:
  selector:
    app: communication-template-api
  ports:
    - port: 80
      name: http
      targetPort: 1337
      protocol: TCP
  type: NodePort
