environments/prod/kubernetes/services/utils/highcharts-export.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: highcharts-export
  labels:
    app: highcharts-export
    env: prod
  namespace: utils
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      name: highcharts-export
      labels:
        app: highcharts-export
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: highcharts-export
          image: steblynskyi-docker.jfrog.io/highcharts-export-server:247b62
          imagePullPolicy: Always
#          Uncomment this section if app has health check endpoint
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              port: http
#              scheme: HTTP
#            initialDelaySeconds: 20
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 5
          resources:
#            limits:
#              cpu: 250m
#              memory: 250Mi
          ports:
            - containerPort: 8080
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: highcharts-export
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: highcharts-export
  namespace: utils
  labels:
    Domain: utils-highcharts-export.steblynskyi.com
spec:
  selector:
    app: highcharts-export
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  type: NodePort
