environments/prod/kubernetes/services/utils/logging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging
  labels:
    app: logging
    env: prod
  namespace: utils
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: logging
      labels:
        app: logging
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: logging
          image: steblynskyi-docker.jfrog.io/devops-logging:v1.1
          imagePullPolicy: Always
#          Uncomment this section if app has health check endpoint
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              port: http
#              scheme: HTTP
#            initialDelaySeconds: 20
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 5
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 24224
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: logging
---
kind: Service
apiVersion: v1
metadata: 
  name: logging
  namespace: utils
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: 0.0.0.0/0
spec:
  selector: 
    app: logging
  ports: 
  - port: 24224
    name: logging
    targetPort: 24224
    protocol: TCP
  type: LoadBalancer
