environments/prod/kubernetes/services/utils/proxy-logging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-logging
  labels:
    app: proxy-logging
    env: prod
  namespace: utils
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: proxy-logging
      labels:
        app: proxy-logging
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: proxy-logging
          image: steblynskyi-docker.jfrog.io/aws-elasticsearch-proxy:v1.0
          imagePullPolicy: Always
#          Uncomment this section if app has health check endpoint
#          livenessProbe:
#            failureThreshold: 3
#            httpGet:
#              port: http
#              scheme: HTTP
#            initialDelaySeconds: 20
#            periodSeconds: 10
#            successThreshold: 1
#            timeoutSeconds: 5
          resources:
            limits:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 8081
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: proxy-logging
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: proxy-logging
  namespace: utils
  labels:
    Domain: utils-proxy-logging.steblynskyi.com
spec:
  selector:
    app: proxy-logging
  ports:
  - port: 80
    name: http
    targetPort: 8081
    protocol: TCP
  type: NodePort
