environments/prod/kubernetes/services/utils/UTILS-INGRESS-INTERNAL.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: utils-ingress-internal
  namespace: utils
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/tags: Environment=PROD,Name=Utils-Ingress-Internal
    alb.ingress.kubernetes.io/subnets: subnet-1,subnet-2,subnet-3
    alb.ingress.kubernetes.io/security-groups: sg-1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:123:certificate/111-222-333-444-555
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS-1-1-2017-01
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}, {"HTTP": 24224}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=false,access_logs.s3.bucket=steblynskyi-prod-kube-ingress-controller-logs,access_logs.s3.prefix=utils,deletion_protection.enabled=true,routing.http2.enabled=true,idle_timeout.timeout_seconds=120
spec:
  rules:
  - host: utils-communication-email-config-api.steblynskyi.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: communication-email-config-api
          servicePort: 80
  - host: utils-communication-email-ses.steblynskyi.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: communication-email-ses
          servicePort: 80
  - host: utils-communication-template-api.steblynskyi.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: communication-template-api
          servicePort: 80
  - host: utils-highcharts-export.steblynskyi.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: highcharts-export
          servicePort: 80
  - host: utils-proxy-logging.steblynskyi.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: proxy-logging
          servicePort: 80
